force-app/main/default/objects/SmartIntake_Control__mdt/SmartIntake_Control__mdt.object-meta.xml
<CustomObject>
    <label>SmartIntake Control</label>
    <pluralLabel>SmartIntake Controls</pluralLabel>
</CustomObject>