force-app/main/default/objects/SmartIntake_Control__mdt/fields/Control_Key__c.field-meta.xml
<CustomField>
    <fullName>Control_Key__c</fullName>
    <label>Control Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>